--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
 </head>
 <body class="bg-white text-neutral-900 overflow-x-hidden">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
