--- a/index.html
+++ b/index.html
@@ -1,25 +1,58 @@
-
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angus Burger | Wembley's Ultimate Burger & Kebab</title>
+
+    <!-- PWA Meta Tags -->
+    <meta name="theme-color" content="#EA580C">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Angus Burger">
+    <link rel="manifest" href="/manifest.json">
+
+    <!-- Apple Touch Icons -->
+    <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/icons/icon-512x512.png">
+
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Oswald:wght@500;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Oswald:wght@500;700&display=swap"
+        rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
             scroll-behavior: smooth;
         }
-        h1, h2, h3, .oswald {
+
+        h1,
+        h2,
+        h3,
+        .oswald {
             font-family: 'Oswald', sans-serif;
             text-transform: uppercase;
         }
-        .text-flame { color: #EA580C; }
-        .bg-flame { background-color: #EA580C; }
-        .bg-charcoal { background-color: #171717; }
-        .text-lettuce { color: #22C55E; }
+
+        .text-flame {
+            color: #EA580C;
+        }
+
+        .bg-flame {
+            background-color: #EA580C;
+        }
+
+        .bg-charcoal {
+            background-color: #171717;
+        }
+
+        .text-lettuce {
+            color: #22C55E;
+        }
 
         /* Reveal Animation Classes */
         .reveal {
@@ -27,35 +60,45 @@
             transform: translateY(30px);
             transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1);
         }
+
         .reveal.active {
             opacity: 1;
             transform: translateY(0);
         }
 
         @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
         }
+
         .animate-fadeIn {
             animation: fadeIn 0.5s ease-out forwards;
         }
-        
+
         /* Custom scrollbar for high energy feel */
         ::-webkit-scrollbar {
             width: 8px;
         }
+
         ::-webkit-scrollbar-track {
             background: #171717;
         }
+
         ::-webkit-scrollbar-thumb {
             background: #EA580C;
             border-radius: 10px;
         }
+
         ::-webkit-scrollbar-thumb:hover {
             background: #f97316;
         }
     </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
@@ -66,8 +109,10 @@
 }
 </script>
 </head>
+
 <body class="bg-white text-neutral-900 overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
